force-app/main/default/objects/et4ae5__UEBU__c/et4ae5__UEBU__c.object-meta.xml
<CustomObject>
    <description>Deprecated</description>
    <label>User Enabled Business Unit</label>
    <nameField>
        <label>Business Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Enabled Business Units</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>