force-app/main/default/objects/et4ae5__UEBU__c/fields/et4ae5__BU__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__BU__c</fullName>
    <label>Business Unit</label>
    <referenceTo>et4ae5__Business_Unit__c</referenceTo>
    <relationshipLabel>User Enabled Business Units</relationshipLabel>
    <relationshipName>User_Enabled_Business_Units</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>