force-app/main/default/objects/et4ae5__UEBU__c/fields/et4ae5__Business_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Business_Unit_ID__c</fullName>
    <formula>et4ae5__BU__r.et4ae5__Business_Unit_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Unit ID</label>
    <type>Text</type>
</CustomField>