force-app/main/default/objects/et4ae5__UEBU__c/fields/et4ae5__Enabled__c.field-meta.xml
<CustomField>
    <fullName>et4ae5__Enabled__c</fullName>
    <formula>IF(et4ae5__BU__r.et4ae5__Enabled__c,&quot;true&quot;,&quot;false&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enabled</label>
    <type>Text</type>
</CustomField>