force-app/main/default/objects/et4ae5__UEBU__c/listViews/et4ae5__All.listView-meta.xml
<ListView>
    <fullName>et4ae5__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>